# scap_bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev_requirements.txt  main.py  pyproject.toml  requirements.txt
cazzate/: scap_coin.py
orari/: aule_libere.txt  dov_e.py  orario.py
src/: utility.py
src/scapbot/: __init__.py  bot.py  console.py  handlers.py
tests/: main.py
utile/: aule_libere.txt  orario.py
